# cpp-lib-skeleton

./: .clang-format  CMakeLists.txt  README.md
docs/: conf.py.in  index.rst
docs/files/: index.rst
include/cpp-lib-skeleton/: cpp-lib-skeleton.hpp
src/: CMakeLists.txt  cpp-lib-skeleton.cpp
tests/: CMakeLists.txt  hello.cpp
